# snake-neat

./: CMakeLists.txt  README.md
include/Model/: Layer.h  Model.h  Neuron.h  Population.h
include/SnakeGame/: Game.h  InputProvider.h  ModelInputProvider.h  Renderer.h  SDLInputProvider.h  Snake.h
include/Utils/: MutationUtils.h  RandomUtils.h
src/: Game.cpp  Layer.cpp  Model.cpp  ModelInputProvider.cpp  Neuron.cpp  Population.cpp  Renderer.cpp  SDLInputProvider.cpp  Snake.cpp  main.cpp
